<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="viewmodel"
            type="com.agilitysciences.alsdk.MainActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:indeterminate="true"
                    android:indeterminateTint="#1a09d6"
                    android:max="100" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/activeledgerlogo" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_centerInParent="true"
                    android:text="Activeledger"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"

                    />

                <LinearLayout
                    android:id="@+id/generatekeys_view"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/app_name"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/keytype_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/generate_keys"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewmodel::generateKeys}"

                        android:text="Generate keys" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_pubkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/generatekeys_view"
                    android:layout_centerInParent="true"
                    android:text="Public Key:"
                    android:textColor="@color/colorPrimaryDark"

                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/pubkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_pubkey"
                    android:text="@{viewmodel.publickey}" />

                <TextView
                    android:id="@+id/tv_prikey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pubkey"
                    android:layout_centerInParent="true"
                    android:text="Private Key:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/prikey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_prikey"
                    android:text="@{viewmodel.privatekey}" />


                <LinearLayout
                    android:id="@+id/onboardkeys_view"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/prikey"
                    android:layout_centerInParent="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/keyname_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="Enter Key Name"
                        android:text="@={viewmodel.keyname}" />


                    <Button
                        android:id="@+id/btn_onboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewmodel::onboardkeys}"
                        android:text="onboard keys" />

                </LinearLayout>


                <TextView
                    android:id="@+id/onBoardId_tv_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/onboardkeys_view"
                    android:text="Onboard ID:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/onBoardId_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/onBoardId_tv_lbl"
                    android:text="@{viewmodel.onBoardId}" />

                <TextView
                    android:id="@+id/onBoardName_tv_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/onBoardId_tv"
                    android:text="Onboard Name:"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/onBoardName_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/onBoardName_tv_lbl"
                    android:text="@{viewmodel.onBoardName}" />

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>

</layout>
